testdata/typechecker/error/Portfolio/Portfolio_ArrayCreation.java
int main() {
    int[][] arr;
    arr = new int[][];
    return 0;
}